fixed overflow and after and before pesudo on article heading

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ body {
   color: #ffefeb;
   cursor: pointer;
   border-radius: 2rem; }
+  @media only screen and (max-width: 56.25em) {
+    .btn {
+      padding: 1.5rem 3rem;
+      font-size: inherit; } }
   .btn--red {
     background-color: #b83e12; }
     .btn--red:hover {
@@ -135,13 +139,14 @@ body {
       .article__heading {
         padding: 1rem;
         background-color: #9095a7;
+        margin-right: -1rem;
         z-index: 100; } }
   .article__heading::before {
     width: 5rem;
-    padding: 0.2rem;
     position: absolute;
     left: -7.5rem;
     top: 0;
+    bottom: 0;
     text-align: center;
     color: #ffefeb;
     font-weight: 400;
@@ -157,18 +162,19 @@ body {
     content: "02"; }
   .article:nth-child(3) h3::before {
     content: "03"; }
-  .article__heading::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #9095a7;
-    z-index: -10;
-    padding: 2rem;
-    top: 0;
-    left: -6rem; }
-  .article .paragraph {
-    margin-left: -8rem; }
+  @media only screen and (max-width: 56.25em) {
+    .article__heading::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      background-color: #9095a7;
+      z-index: -10;
+      top: 0;
+      bottom: 0;
+      left: -5rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .article .paragraph {
+      margin-left: -8rem; } }
 
 .card {
   width: 100%;
@@ -204,7 +210,7 @@ body {
       margin-right: 0;
       flex-direction: column-reverse;
       align-items: center;
-      padding: 5rem; }
+      padding: 2rem; }
       .footer > * {
         width: 100%; } }
   .footer__social {
@@ -250,7 +256,8 @@ body {
     position: relative; }
     @media only screen and (max-width: 56.25em) {
       .footer__form {
-        text-align: center; } }
+        text-align: center;
+        font-size: 1.5rem; } }
     .footer__form > * {
       border: none; }
     .footer__form input {
@@ -258,10 +265,12 @@ body {
       font-size: inherit;
       padding: 1rem 2rem;
       border-radius: 2rem;
-      font-size: 1.3rem; }
+      font-size: inherit; }
       @media only screen and (max-width: 56.25em) {
         .footer__form input {
-          width: 80%; } }
+          padding: 1.5rem 4rem;
+          width: 60%;
+          font-size: inherit; } }
     .footer__form label {
       position: absolute;
       left: 2rem;
@@ -283,15 +292,14 @@ body {
     width: 50%; }
     @media only screen and (max-width: 56.25em) {
       .header > * {
-        text-align: center;
-        width: 100%; } }
+        width: 100%;
+        text-align: center; } }
   .header__text {
     padding: 3rem 5rem 3rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    text-align: center; }
+    align-items: flex-start; }
     @media only screen and (max-width: 56.25em) {
       .header__text {
         padding: 0;
@@ -387,8 +395,7 @@ body {
     @media only screen and (max-width: 56.25em) {
       .section--about > *:nth-child(1) .heading--secondary {
         max-width: none;
-        text-align: center;
-        margin-right: -3rem; } }
+        text-align: center; } }
   .section--about > *:nth-child(1) .paragraph {
     max-width: 400px; }
     @media only screen and (max-width: 56.25em) {
