--- a/sass/components/_article.scss
+++ b/sass/components/_article.scss
@@ -3,24 +3,27 @@
 
   &__heading {
     position: relative;
+
     @include respond(tab-port) {
       padding: 1rem;
       background-color: $secondary-grayish-blue;
+      margin-right: -1rem;
       z-index: 100;
     }
   }
 
   &__heading::before {
     width: 5rem;
-    padding: 0.2rem;
     position: absolute;
     left: -7.5rem;
     top: 0;
+    bottom: 0;
     text-align: center;
     color: $secondary-pale-red;
     font-weight: 400;
     background-color: $primary-red-bright;
     border-radius: 2rem;
+
     @include respond(tab-port) {
       padding: 1rem 2rem;
       width: auto;
@@ -37,18 +40,21 @@
   }
 
   &__heading::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: $secondary-grayish-blue;
-    z-index: -10;
-    padding: 2rem;
-    top: 0;
-    left: -6rem;
+    @include respond(tab-port) {
+      content: "";
+      position: absolute;
+      width: 100%;
+      background-color: $secondary-grayish-blue;
+      z-index: -10;
+      top: 0;
+      bottom: 0;
+      left: -5rem;
+    }
   }
 
   .paragraph {
-    margin-left: -8rem;
+    @include respond(tab-port) {
+      margin-left: -8rem;
+    }
   }
 }
