--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,7 +11,7 @@
     margin-right: 0;
     flex-direction: column-reverse;
     align-items: center;
-    padding: 5rem;
+    padding: 2rem;
     & > * {
       width: 100%;
     }
@@ -77,8 +77,10 @@
 
   &__form {
     position: relative;
+
     @include respond(tab-port) {
       text-align: center;
+      font-size: 1.5rem;
     }
 
     & > * {
@@ -90,9 +92,12 @@
       font-size: inherit;
       padding: 1rem 2rem;
       border-radius: 2rem;
-      font-size: 1.3rem;
+      font-size: inherit;
+
       @include respond(tab-port) {
-        width: 80%;
+        padding: 1.5rem 4rem;
+        width: 60%;
+        font-size: inherit;
       }
     }
 
