--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,8 +9,8 @@
     width: 50%;
 
     @include respond(tab-port) {
-      text-align: center;
       width: 100%;
+      text-align: center;
     }
   }
 
@@ -21,7 +21,6 @@
     justify-content: center;
     align-items: flex-start;
 
-    text-align: center;
     @include respond(tab-port) {
       padding: 0;
       align-items: center;
