--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,6 +7,7 @@
 
   & > * {
     width: 50%;
+
     @include respond(tab-port) {
       width: 100%;
     }
@@ -14,10 +15,10 @@
 
   & > *:nth-child(1) .heading--secondary {
     max-width: 500px;
+
     @include respond(tab-port) {
       max-width: none;
       text-align: center;
-      margin-right: -3rem;
     }
   }
   & > *:nth-child(1) .paragraph {
